--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #cccccc;
+  background-color: #fffaf0;
   color: #333333;
   font-size: 15px;
   line-height: 2;
@@ -44,6 +44,8 @@ header {
 .logo {
   float: left;
   margin-top: 50px;
+  width: 50px;
+  height: auto;
 }
 
 .global-nav {
@@ -54,13 +56,13 @@ header {
 .global-nav li {
   float: left;
   margin: 0 20px;
-  font-size: 20px;
+  font-size: 16px;
   list-style: none;
   font-family: 'Bitter', serif;
 }
 
 .global-nav li a {
-  color: #ffffff;
+  color: #000000;
 }
 
 .global-nav li a:hover {
@@ -137,4 +139,92 @@ index h1{
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+}
+
+
+
+@media screen and (max-width:600px){
+  /* 画面サイズが600px以下の場合に適用 */
+
+  body{
+    font-size: 3.5vw;
+  }
+  h1{
+    font-size: 7.2vw;
+  }
+  h2{
+    font-size: 6vw;
+  }
+  header{
+    width: auto;
+    margin: 0 5%;
+  }
+  .logo{
+    float: none;
+    margin-top: 60px;
+    text-align: center;
+  }
+  .global-nav{
+    float: none;
+    margin-top: 40px;
+    text-align: center;
+  }
+  .global-nav li{
+    display: inline;
+    float: none;
+    margin: 0 8px;
+  }
+  #wrap{
+    margin-top: 40px;
+    padding: 35px 0 0;
+  }
+  .content{
+    width: 100%;
+  }
+  .main{
+    float: none;
+    width: auto;
+    margin: 0 5%;
+  }
+  h2 img{
+    max-width: 100%;
+  }
+}
+
+#event{
+  background-image: url(../images/);
+  background-repeat:no-repeat;
+  background-position: center top;
+  background-attachment: fixed;
+  background-size: 100% auto;
+}
+
+.main{
+  width: 700px;
+  margin: 0 10px;
+  float: left;
+}
+
+.sidebar{
+  width: 200px;
+  margin: 0 10px 0 30px;
+  float: right;
+  font-family: 'Bitter', serif;
+}
+
+a img:hover{
+  opacity: 0.8;
+}
+
+.sidebar h2{
+  margin-bottom: 10px;
+}
+
+.sidebar ul{
+  font-size: 16px;
+  margin-left: 20px;
+}
+
+.sidebar ul a{
+  color: #333333;
 }
