--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ header {
 
 .logo {
   float: left;
-  margin-top: 50px;
+  margin-top: 30px;
   width: 50px;
   height: auto;
 }
@@ -108,23 +108,23 @@ index h1{
 }
 
 .btn a{
-  background-color: #009cd3;
-  color: #ffffff;
-  font-size: 20px;
+  background-color: #ffa500;
+  color: #000000;
+  font-size: 18px;
   font-family: 'Bitter',serif;
-  width: 185px;
+  width: 150px;
   display: block;
   text-align: center;
   line-height: 50px;
   margin-top: 20px;
   border-radius: 5px;
-  border: 3px solid #009cd3;
+  border: 3px solid #ffa500;
 }
 
 .btn a:hover{
   text-decoration: none;
-  background-color: #ffffff;
-  color: #009cd3;
+  background-color: #ffe4b5;
+  color: #000000;
 }
 
 #index footer{
@@ -134,7 +134,7 @@ index h1{
 }
 
 #index{
-  background-image: url(../images/candy.png);
+  background-image: url(../images/main.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
