--- a/css/style.css
+++ b/css/style.css
@@ -273,14 +273,23 @@ a img:hover{
     margin: 0 5%;
   }
   .logo{
-    float: none;
-    margin-top: 60px;
-    text-align: center;
+    margin: 0 15px;
+    justify-content: center;
+    img {
+      width: auto;
+      height: 7vh;
+    }
   }
   .global-nav{
-    float: none;
-    margin-top: 40px;
-    text-align: center;
+    position: fixed;
+    top: 10vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    background-color: rgba(0, 0, 0, 0.5);
   }
   .global-nav li{
     display: inline;
@@ -309,4 +318,45 @@ a img:hover{
     padding: 30px 10% 10px;
     background-color: #f7f6f4;
   }
+}
+
+
+@media (max-width: 760px){
+  header {
+   top: 0;
+   height: 10vh;
+
+  .logo {
+    margin: 0 15px;
+    justify-content: center;
+  img {
+    height: 5vh;
+  }
+  nav {
+    position: fixed;
+    top: 10vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    background-color: rgba(0, 0, 0, 0.5);
+  ul {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    flex-direction: column;
+    align-items: flex-start;
+  li {
+    margin: 20px;
+  a {
+    font-size: 20px;
+    color: white;
+}}}}}}}
+
+@media (min-width: 761px){
+  .btn-trigger {
+        display: none;
+    }
 }
