--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,14 @@ body {
   line-height: 2;
 }
 
-p,h1,h2,h3,h4,h5,h6 {
+p,h2,h3,h4,h5,h6 {
   margin-top: 20px;
+  font-family: 'Kiwi Maru', serif;
+}
+
+h1{
+  margin-top: 20px;
+  padding: 60px 0 0 0;
   font-family: 'Kiwi Maru', serif;
 }
 
@@ -42,6 +48,14 @@ header {
   margin: 0 auto;
 }
 
+.background {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
 .logo {
   float: left;
   margin-top: 30px;
@@ -56,7 +70,7 @@ header {
 
 .global-nav li {
   float: left;
-  margin: 0 20px;
+  margin: 0 8px;
   font-size: 16px;
   list-style: none;
   font-family: 'Kiwi Maru', serif;
@@ -67,6 +81,7 @@ header {
 }
 
 .global-nav li a:hover {
+  color: #ffa500;
   border-bottom: 2px solid #ffffff;
   padding-bottom: 3px;
   text-decoration: none;
@@ -92,7 +107,7 @@ footer small {
   font-size: 12px;
 }
 
-index h1{
+top h1{
   font-size: 100px;
   line-height: 1;
   color: #000000;
@@ -101,11 +116,11 @@ index h1{
   border: none;
 }
 
-#index .content{
+#top .content{
   margin-top: 150px;
 }
 
-#index p{
+#top p{
   font-size: 16px;
   color: #000000;
 }
@@ -170,14 +185,14 @@ index h1{
   color: #ffa500;
 }
 
-#index footer{
+#top footer{
   width: 960px;
   margin: 150px auto 0 auto;
   text-align: left;
   background-color: transparent;
 }
 
-#index{
+#top{
   background-image: url(../images/main.png);
   background-repeat: no-repeat;
   background-position: center center;
@@ -252,7 +267,7 @@ section{
   margin-bottom: 35px;
 }
 
-#index #wrap{
+#top #wrap{
   background-color: transparent;
   margin-top: 0;
   padding: 0;
