--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@ body {
   line-height: 2;
 }
 
-p,h2,h3,h4,h5,h6 {
+p,h3,h4,h5,h6 {
   margin-top: 20px;
   font-family: 'Kiwi Maru', serif;
 }
 
-h1{
+h1,h2{
   margin-top: 20px;
   padding: 60px 0 0 0;
   font-family: 'Kiwi Maru', serif;
