--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #ffffe0;
+  background-color: #ffffff;
   color: #333333;
   font-size: 15px;
   line-height: 2;
@@ -16,7 +16,7 @@ p,h3,h4,h5,h6 {
 
 h1,h2{
   margin-top: 20px;
-  padding: 60px 0 0 0;
+  padding: 30px 0 0 0;
   font-family: 'Kiwi Maru', serif;
 }
 
@@ -63,15 +63,19 @@ header {
   height: auto;
 }
 
+nav {
+  position: relative;
+}
+
 .global-nav {
   float: right;
-  margin-top: 60px;
+  margin-top:60px;
 }
 
 .global-nav li {
   float: left;
-  margin: 0 8px;
-  font-size: 16px;
+  margin: 0 10px;
+  font-size: 15px;
   list-style: none;
   font-family: 'Kiwi Maru', serif;
 }
@@ -81,8 +85,7 @@ header {
 }
 
 .global-nav li a:hover {
-  color: #ffa500;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #ffa500;
   padding-bottom: 3px;
   text-decoration: none;
 }
@@ -134,7 +137,7 @@ top h1{
   display: block;
   text-align: center;
   line-height: 50px;
-  margin-top: 20px;
+  margin-top: 50px;
   border-radius: 5px;
   border: 3px solid #ffa500;
 }
@@ -210,7 +213,7 @@ top h1{
 
 #wrap{
   clear: both;
-  background-color: #ffffe0;
+  background-color: #ffffff;
   margin-top: 220px;
   padding: 35px 0;
 }
@@ -244,17 +247,17 @@ h2{
   border-left: 7px solid #e4ad6d;
 }
 
-#about .jiman-txt{
-  width: 540px;
-  float: left;
+#classic .ame-txt{
+  width: 640px;
 }
 
-#about .jiman-txt span{
+#classic .ame-txt span{
   font-weight: bold;
 }
 
-#about .jiman-image{
+#classic .ame-image{
   float: right;
+  width: 230px;
 }
 
 .clearfix:after{
