--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #ffffff;
+  background-color: #fff4e6;
   color: #333333;
   font-size: 15px;
   line-height: 2;
