--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ p,h3,h4,h5,h6 {
 
 h1,h2{
   margin-top: 30px;
-  padding: 80px 0 0 0;
+  padding: 40px 0 0 0;
   font-family: 'Kiwi Maru', serif;
 }
 
@@ -104,7 +104,6 @@ footer {
   text-align: center;
   color: #000000;
   padding: 20px 0;
-  margin-top: 60px;
   background-color: #bdbdbd;
 }
 
@@ -139,7 +138,7 @@ footer small {
   display: block;
   text-align: center;
   line-height: 50px;
-  margin-top: 20px;
+  margin-top: 80px;
   border-radius: 5px;
   border: 3px solid #ffa500;
 }
@@ -238,7 +237,8 @@ footer small {
 
 #wrap{
   clear: both;
-  background-color: #ffffff;
+  background-image: url(../images/wasi.jpg);
+    background-size: cover;
   margin-top: 220px;
   padding: 35px 0;
 }
