--- a/css/style.css
+++ b/css/style.css
@@ -211,10 +211,12 @@ footer small {
 }
 
 #top footer{
-  width: 960px;
-  margin: 150px auto 0 auto;
-  text-align: left;
-  background-color: transparent;
+  font-family: 'Kiwi Maru', serif;
+  text-align: center;
+  color: #000000;
+  padding: 20px 0;
+  margin-top: 200px;
+  background-color: #bdbdbd;
 }
 
 #top{
@@ -237,8 +239,8 @@ footer small {
 
 #wrap{
   clear: both;
-  background-image: url(../images/wasi.jpg);
-    background-size: cover;
+  background-image: url(../images/bon.jpg);
+  background-repeat: repeat;
   margin-top: 220px;
   padding: 35px 0;
 }
