--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ nav {
 .content {
   width: 960px;
   margin: 0 auto;
+  margin-bottom: 150px;
 }
 
 footer {
@@ -104,6 +105,7 @@ footer {
   text-align: center;
   color: #000000;
   padding: 20px 0;
+
   background-color: #bdbdbd;
 }
 
